--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="زرادي"/>
+    <meta name="keywords" content="زردة زرادي   زرده "/>
+    <meta name="author" content="Mousa saad"/>
+    
+    <meta property="og:title" content="زردة"/>
+    <meta property="og:description" content="الجماعة"/>
+    <meta property="og:image" content="img/15.jpeg"/>
+    <meta property="og:image:width" content="1200px"/>
+    <meta property="og:image:height" content="630px"/>
+    <meta property="og:type" content="website"/>
+
     <title>تسجيل الدخول</title>
     <link rel="icon" href="img/15.jpeg"/>
     <link rel="apple-touch-icon" href="img/15.jpeg"/>
     <link rel="shortcut" href="img/15.jpeg"/>
+
     <!--fail css-->
     <link rel="stylesheet" href="css/mousa.css"/>
+
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
